# LoongForge

./: .gitleaks.toml  .license-header.txt  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  README_zh.md  about.html  blog.html  docs.html  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: README.md  auto-label.yml  build.yml  claude-review.yml  internal-ci.yml  issue-notify.yml  license.yml  pr-title.yml  secrets.yml  submodule-sync.yml
.readthedocs/en/: .readthedocs.yaml
.readthedocs/zh/: .readthedocs.yaml
assets/css/: style.css
assets/data/: posts.json
assets/js/: blog.js  home-news.js  main.js
blog/: 2025-10-llava-onevision-case-study.html  2025-10-llava-onevision-case-study.zh.html  2026-04-announcing-loongforge.html  2026-04-announcing-loongforge.zh.html  2026-05-loongforge-v0.1.0-release.html  2026-05-loongforge-v0.1.0-release.zh.html  index.html
configs/data/: sft_dataset_config.yaml
configs/models/kimi_k2.6/: kimi_k2_6.yaml
configs/models/pi05/: pi05.yaml
configs/models/wan/: wan2_1_i2v.yaml
docker/: Dockerfile.xpu  fix_xpytorch_hook.sh  xpu_packages.json
docs/: Makefile
docs/assets/images/: benchmark_image.py
docs/source/: index.rst
docs/source/features/: offline_data_packing.md
docs/source/get_started/: installation.md
docs/source/kunlun_tutorial/: quick_start_vla_p800.md
docs/source/llm_tutorial/: features_index.md
docs/source/vla_tutorial/: index.rst
docs/source/vlm_tutorial/: features_index.md
docs/source_zh/: HEADER_GUIDELINES.md  conf.py  faqs.md  index.rst
docs/source_zh/advance/: support_new_model.md
docs/source_zh/features/: adaptive_fp8.md  data_parallel_balancing.md  fp8_training.md  fp8_training_for_vlm.md  fused_linear_cross_entropy.md  heterogeneous_parallel.md  mcore_bridge.md  model_combination.md  moe_all2all_overlap.md  offline_data_packing.md  optimizer_support.md  vit_data_parallel_balancing.md
docs/source_zh/get_started/: installation.md  optimization_guide.md  support_model.md
docs/source_zh/kunlun_tutorial/: README.md  install_p800.md  quick_start_llm_pretrain_p800.md  quick_start_llm_sft_p800.md  quick_start_vla_p800.md  quick_start_vlm_p800.md
docs/source_zh/llm_tutorial/: features_index.md  llm_ckpt_convert.md  quick_start_llm_pretrain.md  quick_start_llm_sft.md
docs/source_zh/usage/: lora_usage.md
docs/source_zh/vla_tutorial/: quick_start_pi05_training.md
docs/source_zh/vlm_tutorial/: dataset_conversion.md  features_index.md  quick_start_vlm_pretrain.md  quick_start_vlm_sft.md  vlm_ckpt_convert.md
docs/source_zh/wan_tutorial/: quick_start_wan_training.md  wan_packing.md
examples/groot_n1.6/finetuning/: sft_groot.sh
examples/kimi_k2.x/nvfp4_ptq/: convert_hf_bf16_to_nvfp4_modelopt.sh  kimi_k2x_nvfp4_modelopt_driver.py
examples/minimax/finetuning/: sft_minimax2.1_group_bf16.sh  sft_minimax2.1_group_fp8.sh  sft_minimax2.5_group_bf16.sh  sft_minimax2.5_group_fp8.sh  sft_minimax2.7_group_bf16.sh  sft_minimax2.7_group_fp8.sh
examples/wan/: convert_checkpoint_hg2mcore.py  convert_checkpoint_mcore2hg.py  convert_wan2.1.sh  preprocess.sh  pretrain_wan2.1_i2v_a14b.sh  wan_preprocess.py
loongforge/data/: __init__.py  chat_template.py  encoder_strided_sampler.py  sft_dataset.py  sft_format_utils.py  sft_supervised_utils.py
loongforge/train/: arguments.py  checkpointing.py  training_utils.py  validators.py
loongforge/train/sft/: utils.py
loongforge/utils/: config_map.py  constants.py  global_vars.py
tools/convert_checkpoint/: arguments.py
(+116 files in other folders)
