[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LoongForge"
version = "0.1.0"
description = "LoongForge framework: an all-scenario training framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "The LoongForge Authors" }
]
keywords = ["baidu", "training", "megatron", "llm", "vlm", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
gpu = [
    # Core
    "packaging>=23.2,<25",
    "wrapt==1.16.0",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "protobuf==3.20.2",
    # LLM / HF ecosystem
    "transformers==5.2.0",
    "datasets==2.19.2",
    "accelerate==1.12.0",
    "tokenizers==0.22.2",
    "sentencepiece>=0.2.0",
    "safetensors==0.4.5",
    "compressed-tensors==0.15.0.1",
    "huggingface_hub==1.5.0",
    "tiktoken==0.5.2",
    "blobfile",
    # Training / Modeling utils
    "einops==0.8.1",
    "timm==1.0.3",
    "webdataset==0.2.111",
    "regex",
    "natsort==8.4.0",
    "pandarallel",
    # NLP / dataset utils
    "jsonlines==4.0.0",
    "ftfy==6.1.3",
    "nltk==3.9.1",
    "py-cpuinfo==9.0.0",
    # Monitoring / logging
    "wandb==0.21.4",
    "swanlab",
    # Vision / misc
    "opencv-python-headless==4.11.0.86",
    # Megatron / Qwen
    "qwen-vl-utils==0.0.11",
    "megatron-energon==5.0.0",
    # GPU-specific
    "deepspeed==0.17.6",
    "flashinfer-python==0.6.2",
    "flashinfer-cubin==0.6.2",
    "tilelang==0.1.7post1",
]
xpu = [
    # Core
    "hydra-core==1.3.2",
    # LLM / HF ecosystem (XPU-specific versions)
    "transformers==4.57.1",
    "datasets==2.20.0",
    "accelerate==0.25.0",
    "sentencepiece==0.1.99",
    # Training / Modeling utils
    "einops==0.7.0",
    # NLP / dataset utils
    "py-cpuinfo==9.0.0",
    # Monitoring / logging
    "wandb==0.21.4",
    "swanlab",
    # Vision / misc
    "opencv-python==4.11.0.86",
    # XPU-specific
    "scipy",
    "pybind11",
    "numpy",
    "Cython",
    "megatron-energon==5.0.0",
    "botocore==1.41.6",
]

[project.urls]
Homepage = "https://github.com/baidu-baige/LoongForge"
Repository = "https://github.com/baidu-baige/LoongForge"
Documentation = "https://baidu-baige.github.io/LoongForge/"
Changelog = "CHANGELOG.md"

[project.scripts]
LoongForge = "loongforge.train:main"

[dependency-groups]
test = [
    "pytest",
    "mock",
]
dev = [
    "pre-commit>=3.2",
]
notebook = [
    "jupyterlab",
    "jupyterlab-language-pack-zh-CN",
    "jupytext",
]
internal = [
    # Build toolchain
    "setuptools>=65.5",
    "wheel>=0.42",
    "hatchling>=1.18.0",
    "build>=1.0.3",
    # Test / Dev / Notebook
    {include-group = "test"},
    {include-group = "dev"},
    {include-group = "notebook"},
]

[tool.uv]
no-build-isolation-package = [
    "transformer-engine",
]

[tool.hatch.build]
packages = ["loongforge"]
include = [
    "loongforge/conf/*",
    "loongforge/data/*",
    "loongforge/**/*.yaml",
    "loongforge/**/*.json",
    "loongforge/**/*.jinja",
]

[tool.hatch.build.targets.wheel]
packages = ["loongforge"]
output-dir = "output/dist"

[tool.hatch.build.targets.sdist]
output-dir = "output/dist"
